[package]
name = "rosystarling"
version = "0.0.1"
edition = "2018"
authors = ["Yue Jiao <cleamoon@hotmail.com>"]

#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
x86_64 = "0.14.2"
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", 
    "stdio", "-display", "none"
]
test-timeout = 300      # (in seconds)
test-success-exit-code = 33     # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false